hphp/hack/test/ifc/check/new.php.exp
=== IFC analysis results for new.php
File "new.php", line 13, characters 5-28:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "new.php", line 6, characters 68-74:
  This may be the data source with policy `PRIVATE`
  File "new.php", line 19, characters 67-73:
  This may be the data sink with policy `PUBLIC`
File "new.php", line 28, characters 5-28:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "new.php", line 6, characters 68-74:
  This may be the data source with policy `PRIVATE`
  File "new.php", line 19, characters 67-73:
  This may be the data sink with policy `PUBLIC`
File "new.php", line 36, characters 5-19:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "new.php", line 6, characters 68-74:
  This may be the data source with policy `PRIVATE`
  File "new.php", line 19, characters 67-73:
  This may be the data sink with policy `PUBLIC`
  File "new.php", line 19, characters 67-73:
  Another program point contributing to the illegal flow
